--- a/logging/syslog-forwarding/0-poc_ocp.conf
+++ b/logging/syslog-forwarding/0-poc_ocp.conf
@@ -1,8 +1,8 @@
 #create this file in /etc/rsyslog.d/
-if ($syslogtag == "pococp") then
+if ($syslogtag == "ocpdev") then
 {
-    action(type="omfile" file="/var/log/pococp.log")
+    action(type="omfile" file="/var/log/ocpdev.log")
 } 
 
-if $syslogtag contains 'pococp' then /var/log/pococp.log
-:syslogtag, isequal, "pococp" ./var/log/pococp.log
+if $syslogtag contains 'ocpdev' then /var/log/ocpdev.log
+:syslogtag, isequal, "ocpdev" ./var/log/ocpdev.log
